--- a/src/main.css
+++ b/src/main.css
@@ -1,15 +1,30 @@
-body {
-  background-color: #D8D8D8;
+body, h1, h2, h3 {
+    margin: 0;
+    padding: 0;
+	font-size: 100%;
+	font: inherit;
 }
-
-body, h1, h2 {
-  margin: 0;
-  padding: 0;
-  font-weight: normal;
-  font-family: "Courier New", Courier, monospace
+body {
+  	background-color: #D8D8D8;
+  	font-family: "Courier New", Courier, monospace;
+}
+h1 {
+	font-size: 32px;
+}
+h2 {
+	font-size: 22px;
+}
+h3 {
+	font-size: 16px;
+	font-weight: bold;
 }
 .header {
-   background-color: #644C69;
-   text-align: center;
-   color: #FFFFFF;
+   	background-color: #644C69;
+   	text-align: center;
+   	color: #FFFFFF;
+	padding: 20px 0px 20px 0px;
+}
+.main-content {
+	padding: 20px 20px 20px 20px;
+	margin: 0px auto 0px auto;
 }
